--- a/fe/html/svn/add.html
+++ b/fe/html/svn/add.html
@@ -5,11 +5,42 @@
 </ol>
 <form name="typeForm">
     <div class="form-group">
+        <h4>服务单元基本信息</h4>
         <input type="text" name="svn_path" ng-model="svn.svn_path" required class="form-control" id="svn-path" placeholder="SVN PATH">
         <span class=" error" ng-show="typeForm.svn_path.$error.required">填写svn路径</span>
     </div>
     <div class="form-group">
         <textarea class="form-control" ng-model="svn.desc"  placeholder="备注"></textarea>
     </div>
+    <hr/>
+    <div class="form-group clearfix">
+        <h4>tag关联</h4>
+        <select class="pull-left" ng-model="tag_selected" ng-options="o.tag_id as o.tag_name for o in service_tags">
+            <option value="">请选择</option>
+        </select>
+
+
+        <input ng-model="tag_deploy" type="text" style="width: 70%;margin-left: 10px;" class="form-control pull-left input-group-sm"/>
+        <button ng-click="relate()" type="button" class="btn btn-default" style="margin-left: 10px;">添加关联</button>
+
+        <hr ng-show="relatedTags.length > 0" />
+        <h4 ng-show="relatedTags.length > 0">关联列表</h4>
+        <ul class="list-group">
+            <li class="list-group-item clearfix" ng-repeat="item in relatedTags">
+                <input type="hidden" ng-model="item.id"/>
+
+                <select class="pull-left" ng-model="item.tag_id" ng-options="o.tag_id as o.tag_name for o in service_tags">
+                    <option value="">请选择</option>
+                </select>
+
+                <input type="text" style="width: 70%;margin-left: 10px;" ng-model="item.deploy_path" class="form-control pull-left input-group-sm"/>
+
+                <button ng-click="deleteRelate(item)" type="button" class="btn btn-default" style="margin-left: 10px;">删除</button>
+            </li>
+        </ul>
+
+    </div>
+
+    <hr/>
     <button ng-click="submit()" type="submit" class="btn btn-default">提交</button>
 </form>
