--- a/fe/html/svn/list.html
+++ b/fe/html/svn/list.html
@@ -5,11 +5,18 @@
 
 <div class="list-group">
     <div class="list-group" ng-repeat="item in list">
-        <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">{{item.svn_path}}
-                <span class="label label-success pull-right tag-service" ng-repeat="tag in item.service_tags"  title="{{tag.deploy_path}}">{{tag.tag_name}}</span>
-            </h4>
+        <div  class="list-group-item">
+            <h5 class="list-group-item-heading">{{item.svn_path}}
+                <a href="#/svn/update/{{item.id}}" class="btn btn-info btn-xs pull-right" role="button">更新</a>
+            </h5>
+                <ul class="list-group clearfix" style="margin-top: 10px;" >
+                    <li class="list-group-item clearfix" ng-repeat="tag in item.service_tags" >
+                        <span class="label label-success pull-left tag-service">{{tag.tag_name}}</span>
+                        <p class="list-group-item-text">{{tag.deploy_path}}</p>
+                    </li>
+                </ul>
+
             <p class="list-group-item-text">{{item.desc}}</p>
-        </a>
+        </div>
     </div>
 </div>
